<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/person"/>

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/img_profile"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/muhammad_asrul"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_name"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/img_profile"
            android:fontFamily="@font/poppins"
            android:text="@string/profile_desc"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:text="@string/you_might_like"
            android:textColor="#302F34"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/list"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="18dp"
            android:visibility="invisible"
            android:contentDescription="@string/list_button" />

        <ImageView
            android:id="@+id/btn_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grid"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="18dp"
            android:visibility="invisible"
            android:contentDescription="@string/grid_button" />

        <ImageView
            android:id="@+id/btn_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/card"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="18dp"
            android:visibility="invisible"
            android:contentDescription="@string/card_button" />

        <FrameLayout
            android:id="@+id/main_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/btn_list"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:listitem="@layout/list_item">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/list_item"/>
        </FrameLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>