<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorCard"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/img_item"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/colorAccent"
        android:contentDescription="@string/camera_image" />

    <TextView
        style="@style/Text.Title"
        android:id="@+id/txt_name"
        tools:text="Ricoh Tf-900"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/img_item"
        app:layout_constraintEnd_toEndOf="@+id/img_item"
        app:layout_constraintStart_toStartOf="@+id/img_item" />

    <TextView
        style="@style/Text"
        android:id="@+id/txt_price"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:text="Rp 1.500.000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_name"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_price">
        <ImageView
            android:id="@+id/img_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/stars"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/stars_image" />
        <ImageView
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_black_24dp"
            android:padding="4dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/favorite_button" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>