<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="8dp"
    android:id="@+id/cv_item">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorCard"
        android:padding="8dp">
        <ImageView
            android:id="@+id/img_item"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent"
            android:contentDescription="@string/camera_image" />
        <TextView
            style="@style/Text.Title"
            android:id="@+id/tv_item_name"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_item"
            tools:text="Ricoh Tf-900" />
        <TextView
            style="@style/Text"
            android:id="@+id/txt_price"
            tools:text="Rp 1.500.000"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/img_item"
            android:layout_below="@id/tv_item_name"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_item"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp">
            <ImageView
                android:id="@+id/img_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/stars"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/stars_image" />
            <ImageView
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_black_24dp"
                android:padding="4dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/favorite_button" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>